y.output
Terminals which are not used

   EQUAL
   BL
   BR
   QUOT


Rules never reduced

    4 sentence: sentence


State 6 conflicts: 5 reduce/reduce
State 16 conflicts: 5 reduce/reduce


Grammar

    0 $accept: all $end

    1 all: sentence
    2    | all sentence

    3 sentence: eval SEMICOLON
    4         | sentence

    5 eval: assign_expression
    6     | function_expression

    7 function_expression: VAL_NAME SL expression SR

    8 assign_expression: VAL_NAME ASSIGN expression
    9                  | INTEGER_M VAL_NAME ASSIGN expression
   10                  | DOUBLE_M VAL_NAME ASSIGN expression
   11                  | STRING_M VAL_NAME ASSIGN expression
   12                  | INTEGER_M VAL_NAME
   13                  | DOUBLE_M VAL_NAME
   14                  | STRING_M VAL_NAME

   15 expression: high_expression
   16           | expression ADD primary_exp
   17           | expression SUB primary_exp

   18 high_expression: primary_exp
   19                | high_expression MUL primary_exp
   20                | high_expression DIV primary_exp

   21 primary_exp: DOUBLE
   22            | INTEGER


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 16
SUB (259) 17
MUL (260) 19
DIV (261) 20
EQUAL (262)
ASSIGN (263) 8 9 10 11
SEMICOLON (264) 3
BL (265)
BR (266)
SL (267) 7
SR (268) 7
QUOT (269)
INTEGER_M (270) 9 12
DOUBLE_M (271) 10 13
STRING_M (272) 11 14
INTEGER (273) 22
DOUBLE (274) 21
VAL_NAME (275) 7 8 9 10 11 12 13 14


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
all (22)
    on left: 1 2, on right: 0 2
sentence (23)
    on left: 3 4, on right: 1 2 4
eval (24)
    on left: 5 6, on right: 3
function_expression (25)
    on left: 7, on right: 6
assign_expression (26)
    on left: 8 9 10 11 12 13 14, on right: 5
expression (27)
    on left: 15 16 17, on right: 7 8 9 10 11 16 17
high_expression (28)
    on left: 18 19 20, on right: 15 19 20
primary_exp (29)
    on left: 21 22, on right: 16 17 18 19 20


state 0

    0 $accept: . all $end

    INTEGER_M  shift, and go to state 1
    DOUBLE_M   shift, and go to state 2
    STRING_M   shift, and go to state 3
    VAL_NAME   shift, and go to state 4

    all                  go to state 5
    sentence             go to state 6
    eval                 go to state 7
    function_expression  go to state 8
    assign_expression    go to state 9


state 1

    9 assign_expression: INTEGER_M . VAL_NAME ASSIGN expression
   12                  | INTEGER_M . VAL_NAME

    VAL_NAME  shift, and go to state 10


state 2

   10 assign_expression: DOUBLE_M . VAL_NAME ASSIGN expression
   13                  | DOUBLE_M . VAL_NAME

    VAL_NAME  shift, and go to state 11


state 3

   11 assign_expression: STRING_M . VAL_NAME ASSIGN expression
   14                  | STRING_M . VAL_NAME

    VAL_NAME  shift, and go to state 12


state 4

    7 function_expression: VAL_NAME . SL expression SR
    8 assign_expression: VAL_NAME . ASSIGN expression

    ASSIGN  shift, and go to state 13
    SL      shift, and go to state 14


state 5

    0 $accept: all . $end
    2 all: all . sentence

    $end       shift, and go to state 15
    INTEGER_M  shift, and go to state 1
    DOUBLE_M   shift, and go to state 2
    STRING_M   shift, and go to state 3
    VAL_NAME   shift, and go to state 4

    sentence             go to state 16
    eval                 go to state 7
    function_expression  go to state 8
    assign_expression    go to state 9


state 6

    1 all: sentence .
    4 sentence: sentence .

    $end       reduce using rule 1 (all)
    $end       [reduce using rule 4 (sentence)]
    INTEGER_M  reduce using rule 1 (all)
    INTEGER_M  [reduce using rule 4 (sentence)]
    DOUBLE_M   reduce using rule 1 (all)
    DOUBLE_M   [reduce using rule 4 (sentence)]
    STRING_M   reduce using rule 1 (all)
    STRING_M   [reduce using rule 4 (sentence)]
    VAL_NAME   reduce using rule 1 (all)
    VAL_NAME   [reduce using rule 4 (sentence)]
    $default   reduce using rule 1 (all)


state 7

    3 sentence: eval . SEMICOLON

    SEMICOLON  shift, and go to state 17


state 8

    6 eval: function_expression .

    $default  reduce using rule 6 (eval)


state 9

    5 eval: assign_expression .

    $default  reduce using rule 5 (eval)


state 10

    9 assign_expression: INTEGER_M VAL_NAME . ASSIGN expression
   12                  | INTEGER_M VAL_NAME .

    ASSIGN  shift, and go to state 18

    $default  reduce using rule 12 (assign_expression)


state 11

   10 assign_expression: DOUBLE_M VAL_NAME . ASSIGN expression
   13                  | DOUBLE_M VAL_NAME .

    ASSIGN  shift, and go to state 19

    $default  reduce using rule 13 (assign_expression)


state 12

   11 assign_expression: STRING_M VAL_NAME . ASSIGN expression
   14                  | STRING_M VAL_NAME .

    ASSIGN  shift, and go to state 20

    $default  reduce using rule 14 (assign_expression)


state 13

    8 assign_expression: VAL_NAME ASSIGN . expression

    INTEGER  shift, and go to state 21
    DOUBLE   shift, and go to state 22

    expression       go to state 23
    high_expression  go to state 24
    primary_exp      go to state 25


state 14

    7 function_expression: VAL_NAME SL . expression SR

    INTEGER  shift, and go to state 21
    DOUBLE   shift, and go to state 22

    expression       go to state 26
    high_expression  go to state 24
    primary_exp      go to state 25


state 15

    0 $accept: all $end .

    $default  accept


state 16

    2 all: all sentence .
    4 sentence: sentence .

    $end       reduce using rule 2 (all)
    $end       [reduce using rule 4 (sentence)]
    INTEGER_M  reduce using rule 2 (all)
    INTEGER_M  [reduce using rule 4 (sentence)]
    DOUBLE_M   reduce using rule 2 (all)
    DOUBLE_M   [reduce using rule 4 (sentence)]
    STRING_M   reduce using rule 2 (all)
    STRING_M   [reduce using rule 4 (sentence)]
    VAL_NAME   reduce using rule 2 (all)
    VAL_NAME   [reduce using rule 4 (sentence)]
    $default   reduce using rule 2 (all)


state 17

    3 sentence: eval SEMICOLON .

    $default  reduce using rule 3 (sentence)


state 18

    9 assign_expression: INTEGER_M VAL_NAME ASSIGN . expression

    INTEGER  shift, and go to state 21
    DOUBLE   shift, and go to state 22

    expression       go to state 27
    high_expression  go to state 24
    primary_exp      go to state 25


state 19

   10 assign_expression: DOUBLE_M VAL_NAME ASSIGN . expression

    INTEGER  shift, and go to state 21
    DOUBLE   shift, and go to state 22

    expression       go to state 28
    high_expression  go to state 24
    primary_exp      go to state 25


state 20

   11 assign_expression: STRING_M VAL_NAME ASSIGN . expression

    INTEGER  shift, and go to state 21
    DOUBLE   shift, and go to state 22

    expression       go to state 29
    high_expression  go to state 24
    primary_exp      go to state 25


state 21

   22 primary_exp: INTEGER .

    $default  reduce using rule 22 (primary_exp)


state 22

   21 primary_exp: DOUBLE .

    $default  reduce using rule 21 (primary_exp)


state 23

    8 assign_expression: VAL_NAME ASSIGN expression .
   16 expression: expression . ADD primary_exp
   17           | expression . SUB primary_exp

    ADD  shift, and go to state 30
    SUB  shift, and go to state 31

    $default  reduce using rule 8 (assign_expression)


state 24

   15 expression: high_expression .
   19 high_expression: high_expression . MUL primary_exp
   20                | high_expression . DIV primary_exp

    MUL  shift, and go to state 32
    DIV  shift, and go to state 33

    $default  reduce using rule 15 (expression)


state 25

   18 high_expression: primary_exp .

    $default  reduce using rule 18 (high_expression)


state 26

    7 function_expression: VAL_NAME SL expression . SR
   16 expression: expression . ADD primary_exp
   17           | expression . SUB primary_exp

    ADD  shift, and go to state 30
    SUB  shift, and go to state 31
    SR   shift, and go to state 34


state 27

    9 assign_expression: INTEGER_M VAL_NAME ASSIGN expression .
   16 expression: expression . ADD primary_exp
   17           | expression . SUB primary_exp

    ADD  shift, and go to state 30
    SUB  shift, and go to state 31

    $default  reduce using rule 9 (assign_expression)


state 28

   10 assign_expression: DOUBLE_M VAL_NAME ASSIGN expression .
   16 expression: expression . ADD primary_exp
   17           | expression . SUB primary_exp

    ADD  shift, and go to state 30
    SUB  shift, and go to state 31

    $default  reduce using rule 10 (assign_expression)


state 29

   11 assign_expression: STRING_M VAL_NAME ASSIGN expression .
   16 expression: expression . ADD primary_exp
   17           | expression . SUB primary_exp

    ADD  shift, and go to state 30
    SUB  shift, and go to state 31

    $default  reduce using rule 11 (assign_expression)


state 30

   16 expression: expression ADD . primary_exp

    INTEGER  shift, and go to state 21
    DOUBLE   shift, and go to state 22

    primary_exp  go to state 35


state 31

   17 expression: expression SUB . primary_exp

    INTEGER  shift, and go to state 21
    DOUBLE   shift, and go to state 22

    primary_exp  go to state 36


state 32

   19 high_expression: high_expression MUL . primary_exp

    INTEGER  shift, and go to state 21
    DOUBLE   shift, and go to state 22

    primary_exp  go to state 37


state 33

   20 high_expression: high_expression DIV . primary_exp

    INTEGER  shift, and go to state 21
    DOUBLE   shift, and go to state 22

    primary_exp  go to state 38


state 34

    7 function_expression: VAL_NAME SL expression SR .

    $default  reduce using rule 7 (function_expression)


state 35

   16 expression: expression ADD primary_exp .

    $default  reduce using rule 16 (expression)


state 36

   17 expression: expression SUB primary_exp .

    $default  reduce using rule 17 (expression)


state 37

   19 high_expression: high_expression MUL primary_exp .

    $default  reduce using rule 19 (high_expression)


state 38

   20 high_expression: high_expression DIV primary_exp .

    $default  reduce using rule 20 (high_expression)
